--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -15,12 +15,14 @@
   <div class="categories-wrapper">
     <!-- Categories -->
     <div class="categories-flex">
-      <div class="category-item"><span>Men</span></div>
-      <div class="category-item"><span>Women</span></div>
-      <div class="category-item"><span>Bundle</span></div>
-      <div class="category-item"><span>Couple</span></div>
-      <div class="category-item"><span>Accessories</span></div>
-      <div class="category-item"><span>Luxury</span></div>
+      <div class="categories-flex">
+        <a href="src/main/resources/pages/men.html"         class="category-item"><span>Men</span></a>
+        <a href="src/main/resources/pages/women.html"       class="category-item"><span>Women</span></a>
+        <a href="src/main/resources/pages/bundle.html"      class="category-item"><span>Bundle</span></a>
+        <a href="src/main/resources/pages/couple.html"      class="category-item"><span>Couple</span></a>
+        <a href="src/main/resources/pages/accessories.html" class="category-item"><span>Accessories</span></a>
+        <a href="src/main/resources/pages/luxury.html"      class="category-item"><span>Luxury</span></a>
+      </div>
     </div>
 
     <!-- Sort Dropdown -->
@@ -67,70 +69,20 @@
     </div>
   </a>
 
-  <!--WATCH 2-->
-  <a href="src/main/resources/pages/watches/Watch-2.html?id=2" class="card-link">
+  <!--BUNDLE 1-->
+  <a href="src/main/resources/pages/bundles/bundle-1.html?id=2" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/2/watch 2 - 1.webp" alt="Women's Classic Watch">
-      <h4>Trendy And Elegant Quartz Wristwatch</h4>
+      <img src="src/main/resources/assets/bundle/1/bundle 1 - 1.webp" alt="Women's Classic Watch">
+      <h4>5pcs Men's Fashion Quartz Watch & Bracelet Set</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">1,099.00</span>
-        <span class="original">1,391.37</span>
+        <span class="current">1,397.00</span>
+        <span class="original">2,390.69</span>
       </div>
     </div>
   </a>
 
-  <!--WATCH 2-->
-  <a href="src/main/resources/pages/watches/Watch-2.html?id=2" class="card-link">
-    <div class="card">
-      <img src="src/main/resources/assets/watches/2/watch 2 - 1.webp" alt="Women's Classic Watch">
-      <h4>Trendy And Elegant Quartz Wristwatch</h4>
-      <div class="price">
-        <span class="currency">LKR</span>
-        <span class="current">1,099.00</span>
-        <span class="original">1,391.37</span>
-      </div>
-    </div>
-  </a>
-
-
-  <a href="watches/Watch-1.html?id=3" class="card-link">
-    <div class="card">
-      <img src="assets/items/item3.jpg" alt="Bundle Offer (Couple)">
-      <h4>Bundle Offer (Couple)</h4>
-      <div class="price">
-        <span class="currency">LKR</span>
-        <span class="current">10,990</span>
-        <span class="original">12,990</span>
-      </div>
-    </div>
-  </a>
-
-  <a href="watches/Watch-1.html?id=4" class="card-link">
-    <div class="card">
-      <img src="assets/items/item4.jpg" alt="Men's Black Steel">
-      <h4>Men's Black Steel</h4>
-      <div class="price">
-        <span class="currency">LKR</span>
-        <span class="current">7,250</span>
-        <span class="original">8,750</span>
-      </div>
-    </div>
-  </a>
-
-  <a href="watches/Watch-1.html?id=5" class="card-link">
-    <div class="card">
-      <img src="assets/items/item5.jpg" alt="Women's Gold Rose">
-      <h4>Women's Gold Rose</h4>
-      <div class="price">
-        <span class="currency">LKR</span>
-        <span class="current">6,750</span>
-        <span class="original">7,950</span>
-      </div>
-    </div>
-  </a>
 </div>
-
 
 </body>
 </html>
