--- a/src/main/resources/pages/watches/Bundle-1.html
+++ b/src/main/resources/pages/watches/Bundle-1.html
@@ -22,18 +22,18 @@
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../assets/bundle/1/bundle 1 - 1.webp" alt="Bundle 1" class="active" />
-        <img src="../../assets/bundle/1/bundle 1 - 2.webp" alt="Bundle 2" />
-        <img src="../../assets/bundle/1/bundle 1 - 3.webp" alt="Bundle 3" />
-        <img src="../../assets/bundle/1/bundle 1 - 4.webp" alt="Bundle 4" />
-        <img src="../../assets/bundle/1/bundle 1 - 5.webp" alt="Bundle 5" />
-        <img src="../../assets/bundle/1/bundle 1 - 6.webp" alt="Bundle 6" />
+        <img src="../../assets/bundle/1/bundle%201%20-%201.webp" alt="Bundle 1" class="active" />
+        <img src="../../assets/bundle/1/bundle%201%20-%202.webp" alt="Bundle 2" />
+        <img src="../../assets/bundle/1/bundle%201%20-%203.webp" alt="Bundle 3" />
+        <img src="../../assets/bundle/1/bundle%201%20-%204.webp" alt="Bundle 4" />
+        <img src="../../assets/bundle/1/bundle%201%20-%205.webp" alt="Bundle 5" />
+        <img src="../../assets/bundle/1/bundle%201%20-%206.webp" alt="Bundle 6" />
     </div>
 
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../assets/bundle/1/bundle 1 - 1.webp" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../assets/bundle/1/bundle%201%20-%201.webp" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
